workshop/git-webhook-bridge/openshift/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-webhook-bridge
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git-webhook-bridge
  template:
    metadata:
      labels:
        app: git-webhook-bridge
        app.kubernetes.io/name: git-webhook-bridge
    spec:
      containers:
        - name: server
          image: image-registry.openshift-image-registry.svc:5000/aap/git-webhook-bridge:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: "1"
              memory: 384Mi
