workshop/git-webhook-bridge/openshift/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: git-webhook-bridge
spec:
  selector:
    app: git-webhook-bridge
  ports:
    - name: http
      port: 8080
      targetPort: http
