workshop/git-webhook-bridge/openshift/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: git-webhook-bridge
spec:
  to:
    kind: Service
    name: git-webhook-bridge
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
